@@ -330,7 +330,10 @@ while (($job_index <= $#jobs) and ((time() - $initial_time) < $timeout)){
                 vec($resource_id_used_list_vector, oar_resource_tree::get_current_resource_value($l), 1) = 1;
             }
         }
-        my @hole = Gantt_hole_storage::find_first_hole($gantt_to_use, $scheduler_init_date, $duration, \@tree_list);
+        my $gantt_timeout =  ($timeout - (time() - $initial_time)) / 4;
+        $gantt_timeout = 0 if ($gantt_timeout < 0);
+        oar_debug("[oar_sched_gantt_with_timesharing_and_fairsharing] [$j->{job_id}] find_first_hole with a timeout of $gantt_timeout\n");
+        my @hole = Gantt_hole_storage::find_first_hole($gantt_to_use, $scheduler_init_date, $duration, \@tree_list,$gantt_timeout);
         
 #        print("[GANTT] 10 ".gettimeofday."\n");
         my @res_trees;
